typhon-cluster/apps/seerr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: seerr
spec:
  parentRefs:
    - name: main
      namespace: gateway
  hostnames:
    - seerr.buildwithcaleb.com
  rules:
    - backendRefs:
        - name: seerr
          port: 80
